# qpid-sample

./: CMakeLists.txt  README.md  hello_world_messaging_handler.cpp  main.cpp
